--- a/faq.css
+++ b/faq.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -7,6 +8,7 @@
   outline: none;
   list-style: none;
   text-decoration: none;
+  font-family: 'Poppins', sans-serif;
 }
 body, html {
   scroll-behavior: smooth;
@@ -14,384 +16,398 @@ body, html {
 body {
     height: auto;
 }
-/* @media only screen and (min-width: 300px) and (max-width: 960px) { */
-  header, .desktop-user {
-    display: flex;
-    justify-content: space-between;
-    padding: 15px;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3), 0 7px 21px 0 rgba(0, 0, 0, 0.20);
-    background: whitesmoke;
-    z-index: 3;
-    position: sticky;
-    top: 0;
-  }
-  .desktop-user {
-    display: none;
-  }
-  header #openMenu i {
-    color: #FEB822;
-    font-weight: 800;
-    font-size: 20px;
-  }
+header, #header {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3), 0 7px 21px 0 rgba(0, 0, 0, 0.20);
+  background: whitesmoke;
+  z-index: 3;
+  position: sticky;
+  top: 0;
+}
+#header {
+  display: none;
+}
+.desktop-user {
+  display: none;
+}
+header #openMenu i {
+  color: #FEB822;
+  font-weight: 800;
+  font-size: 20px;
+}
 
-  header #logo .maryam {
-    border: 1px solid #FEB822;
-    border-radius: 1vh;
-    padding: 4.5px 0;
-  }
+header #logo .maryam, #header .maryam {
+  border: 1px solid #FEB822;
+  border-radius: 1vh;
+  padding: 4.5px 0;
+}
 
-  header #logo .maryam #mar {
-    background: #FEB822;
-    color: whitesmoke;
-    font-weight: 700;
-    padding: 5px 10px 5px;
-    text-align: center;
-    border-radius: 1vh;
-  }
+header #logo .maryam #mar, #header .maryam #mar {
+  background: #FEB822;
+  color: whitesmoke;
+  font-weight: 700;
+  padding: 5px 10px 5px;
+  text-align: center;
+  border-radius: 1vh;
+}
 
-  header #logo .maryam #yam {
-    color: #FEB822;
-    font-weight: 700;
-    padding: 3px 8px;
-    margin-left: -3px;
-  }
+header #logo .maryam #yam, #header .maryam #yam {
+  color: #FEB822;
+  font-weight: 700;
+  padding: 3px 8px;
+  margin-left: -3px;
+}
 
-  header .toggle a {
-    font-size: 22px;
-  }
+header .toggle a, #header .toggle a {
+  font-size: 22px;
+}
 
-  header .toggle a:nth-child(1) {
-    color: #FEB822;
-    transition: ease-in-out 1.3s;
-    text-decoration: none;
-  }
+header .toggle a:nth-child(1), #header .toggle a:nth-child(1) {
+  color: #FEB822;
+  transition: ease-in-out 1.3s;
+  text-decoration: none;
+}
 
-  section {
-    background: url("whitebg.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: auto;
-    position: relative;
-    opacity: 0.9;
-    z-index: 1;
-    margin-top: 5px;
-    /* padding: 10px; */
-    transition: ease-in-out 1.3s;
-    overflow-y: auto;
-  }
+section {
+  background: url("whitebg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: auto;
+  position: relative;
+  opacity: 0.9;
+  z-index: 1;
+  margin-top: 5px;
+  /* padding: 10px; */
+  transition: ease-in-out 1.3s;
+  overflow-y: auto;
+}
 
-  .chat-container {
-    height: 80vh;
-    padding: 10px;
-  }
+.chat-container {
+  height: 80vh;
+  padding: 10px;
+}
 
-  .bot-conv-container,
-  .user-conv-container {
-    display: flex;
-    flex-direction: row;
-  }
+.bot-conv-container,
+.user-conv-container {
+  display: flex;
+  flex-direction: row;
+}
 
-  .user-conv-container {
-    flex-direction: row-reverse;
-  }
+.user-conv-container {
+  flex-direction: row-reverse;
+}
 
-  .botMsg,
-  .userMsg {
-    background: #DFE0DF;
-    padding: 15px 30px;
-    border-radius: 2vh;
-    width: 250px;
-    transition: ease-in-out 1.3s;
-  }
+.botMsg,
+.userMsg {
+  background: #DFE0DF;
+  padding: 15px 30px;
+  border-radius: 2vh;
+  width: 250px;
+  transition: ease-in-out 1.3s;
+}
 
-  .bot-msg {
-    background: #372800;
-    color: white;
-    transition: ease-in-out 1.3s;
-  }
+.bot-msg {
+  background: #372800;
+  color: white;
+  transition: ease-in-out 1.3s;
+}
 
-  .userMsg {
-    background: #FEB822;
-    transition: ease-in-out 1.3s;
-  }
+.userMsg {
+  background: #FEB822;
+  transition: ease-in-out 1.3s;
+}
 
-  .userMsg2 {
-    background: #143d59;
-    color: white;
-    transition: ease-in-out 1.3s;
-  }
+.userMsg2 {
+  background: #143d59;
+  color: white;
+  transition: ease-in-out 1.3s;
+}
 
-  .bot-pic,
-  .user-pic {
-    margin-top: auto;
-  }
+.bot-pic,
+.user-pic {
+  margin-top: auto;
+}
 
-  .fa-robot {
-    color: #FEB822;
-    transition: ease-in-out 1.3s;
-  }
+.fa-robot {
+  color: #FEB822;
+  transition: ease-in-out 1.3s;
+}
 
-  .bot2 {
-    color: black;
-    transition: ease-in-out 1.3s;
-  }
+.bot2 {
+  color: black;
+  transition: ease-in-out 1.3s;
+}
 
-  small#time {
-    margin-left: 25px;
-  }
+small#time {
+  margin-left: 25px;
+}
 
-  .user-demo-answer small#time {
-    margin-left: 250px;
-  }
+.user-demo-answer small#time {
+  margin-left: 250px;
+}
 
-  .form-wrapper {
-    position: sticky;
-    top: -200;
-    bottom: 0;
-    padding: 10px 20px;
-    overflow-y: none;
-    border: 1px solid grey;
-    z-index: 2;
-    border-radius: 5vh;
-    background: White;
-    box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3), 0 7px 21px 0 rgba(0, 0, 0, 0.20);
-  }
+.form-wrapper {
+  position: sticky;
+  top: -200;
+  bottom: 0;
+  padding: 10px 20px;
+  overflow-y: none;
+  border: 1px solid grey;
+  z-index: 2;
+  border-radius: 5vh;
+  background: White;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3), 0 7px 21px 0 rgba(0, 0, 0, 0.20);
+}
 
-  .conversation-compose {
-    display: flex;
-    flex-direction: row;
-  }
+.conversation-compose {
+  display: flex;
+  flex-direction: row;
+}
 
-  input {
-    border-radius: 5vh;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    background-color: #DFE0DF;
-    padding: 10px;
-    width: 250px;
-  }
+input {
+  border-radius: 5vh;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  background-color: #DFE0DF;
+  padding: 10px;
+  width: 100%;
+}
 
-  .send {
-    background: #FEB822;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px 50px 10 30px;
-    border-radius: 5vh;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    z-index: 1;
-    width: 80px;
-    transition: ease-in-out 1.3s;
-    padding: 15px;
-  }
+.send {
+  background: #FEB822;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 50px 10 30px;
+  border-radius: 5vh;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+  z-index: 1;
+  width: 80px;
+  transition: ease-in-out 1.3s;
+  padding: 15px;
+}
 
-  .send2 {
-    background: #143d59;
-    color: #FEB822;
-    transition: ease-in-out 1.3s;
-  }
+.send2 {
+  background: #143d59;
+  color: #FEB822;
+  transition: ease-in-out 1.3s;
+}
 
-  .mainMenu {
-    height: 100vh;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    z-index: 4;
-    display: none;
-    transform: 1s ease-in-out;
+.mainMenu {
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 4;
+  display: none;
+  transform: 1s ease-in-out;
 
-  }
+}
 
-  .mainMenu::before {
-    content: "";
-    background: #FEB822;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    opacity: 0.75;
-  }
+.mainMenu::before {
+  content: "";
+  background: #FEB822;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  opacity: 0.75;
+}
 
-  h4,
-  ul li,
-  i.fa-times,
-  .popUp,
-  em,
-  div.menu small,
-  div.dev ul li,
-  h5 {
-    position: relative;
-    line-height: 0.9;
-    text-align: center;
-    font-size: 25px;
-  }
+h4,
+ul li,
+i.fa-times,
+.popUp,
+em,
+div.menu small,
+div.dev ul li,
+h5, #slider {
+  position: relative;
+  line-height: 0.9;
+  text-align: center;
+  font-size: 25px;
+}
 
-  li a {
-    color: unset;
-  }
+li a {
+  color: unset;
+}
 
-  div.menu small {
-    font-size: 15px;
-    margin-top: -20px;
-  }
+div.menu small {
+  font-size: 15px;
+  margin-top: -20px;
+}
 
-  h4 {
-    font-size: 30px;
-  }
+h4 {
+  font-size: 30px;
+}
 
-  ul>i.fa-times {
-    margin: 15px;
-  }
+ul>i.fa-times {
+  margin: 15px;
+}
 
-  ul {
-    display: flex;
-  }
+ul {
+  display: flex;
+}
 
-  div.menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    height: 80vh;
-  }
+div.menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  height: 80vh;
+}
 
-  .dev {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-  .slideshow-container {
-    display: none;
-  }
-  h5 {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
+.dev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.slideshow-container {
+  display: none;
+}
+h5 {
+  font-size: 16px;
+  margin-bottom: 10px;
+}
 
-  #dev-list li {
-    margin: 10px;
-  }
+#dev-list li {
+  margin: 10px;
+}
 
-  li {
-    margin: 20px 0;
-  }
+li {
+  margin: 20px 0;
+}
 
-  .fa-paper-plane {
-    color: white;
-  }
+.fa-paper-plane {
+  color: white;
+}
 
-  em {
-    font-size: 15px;
-    margin-top: 10px;
-  }
+em {
+  font-size: 15px;
+  margin-top: 10px;
+}
 
-  .likes {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    /*position: fixed;*/
-    /*margin: 0px 0 0 19%;*/
-    background: #d7d7d7;
-    padding: 8px;
-    border-radius: 2vh;
-    visibility: hidden;
-  }
+.likes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /*position: fixed;*/
+  /*margin: 0px 0 0 19%;*/
+  background: #d7d7d7;
+  padding: 8px;
+  border-radius: 2vh;
+  visibility: hidden;
+}
 
-  .likesShow {
-    visibility: visible;
-  }
+.likesShow {
+  visibility: visible;
+}
 
-  .tmb-up,
-  .tmb-dwn {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 3px 8px;
-  }
+.tmb-up,
+.tmb-dwn {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 3px 8px;
+}
 
-  .thumbs {
-    display: flex;
-  }
+.thumbs {
+  display: flex;
+}
 
-  .likes i {
-    margin-left: 10px;
+.likes i {
+  margin-left: 10px;
 
-  }
+}
 
-  .likesBg {
-    color: #FEB822;
-  }
+.likesBg {
+  color: #FEB822;
+}
 
-  .nodisp {
-    display: none;
-  }
+.nodisp {
+  display: none;
+}
 
-  .display {
-    display: block;
-  }
+.display {
+  display: block;
+}
 
-  .popUp,
-  .thanks {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background: grey;
-    padding: 20px;
-    width: 100px;
-    margin: auto;
-    border-radius: 1vh;
-    /*margin-top: -500px;*/
-    margin-left: 120px;
-    visibility: hidden;
-  }
+.popUp,
+.thanks {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: grey;
+  padding: 20px;
+  width: 100px;
+  margin: auto;
+  border-radius: 1vh;
+  /*margin-top: -500px;*/
+  margin-left: 120px;
+  visibility: hidden;
+}
 
-  .thanks {
-    width: 200px;
-    margin-left: 60px;
-    text-align: center;
-  }
+.thanks {
+  width: 200px;
+  margin-left: 60px;
+  text-align: center;
+}
 
-  .popUp i {
-    margin: 15px 0;
-  }
+.popUp i {
+  margin: 15px 0;
+}
 
-  .showModal {
-    visibility: visible;
-  }
+.showModal {
+  visibility: visible;
+}
 
-  #creator {
-    font-size: 16px;
-  }
-/* } */
+#creator {
+  font-size: 16px;
+}
 
-@media only screen and (min-width: 961px) {
+@media only screen and (min-width: 1204px) {
   div.contain {
     display: flex;
     flex-direction: row;
     justify-content: space-between
   }
-  header, section {
-    width: 100%;
+  section {
+    width: 50%;
     height: 100%;
   }
+  header {
+    display: none;
+    float: left;
+    width: 50%;
+  }
+  #header {
+    display: flex;
+  }
+  #header i {
+    font-size: 30px;
+  }
+  /* #logo, .toggle {
+    display: none;
+  } */
   div#openMenu, .fa-times {
     display: none;
   }
   .mainMenu {
     display: block;
     width: 50%;
-    margin-top: 51px;
   }
   div.menu {
     display: flex;
@@ -399,6 +415,7 @@ body {
     justify-content: unset;
     align-items: unset;
     padding-top: 50px;
+    margin-left: 50px;
   }
   div.lis {
     display: flex;
@@ -408,90 +425,8 @@ body {
   div.lis div {
     margin: 20px;
   }
-  .slideshow-container {
-    max-width: 1000px;
-    position: relative;
-    margin-top: -40%;
-    display: block;
-    background: rgb(46, 45, 45);
-  }
-
-  /* Hide the images by default */
-  .mySlides {
-    display: none;
-    padding: 20px 220px;
-
-  }
-
-  /* Next & previous buttons */
-  .prev,
-  .next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    margin-top: -22px;
-    padding: 16px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-
-  /* Position the "next button" to the right */
-  .next {
-    right: 0;
-    border-radius: 3px 0 0 3px;
-  }
-
-  /* On hover, add a black background color with a little bit see-through */
-  .prev:hover,
-  .next:hover {
-    background-color: rgba(0, 0, 0, 0.8);
-  }
-
-  /* Number text (1/3 etc) */
-  .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
-    padding: 8px 12px;
-    position: absolute;
-    top: 0;
-  }
-
-  /* The dots/bullets/indicators */
-  .dot {
-    cursor: pointer;
-    height: 15px;
-    width: 15px;
-    margin: 0 2px;
-    background-color: #bbb;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-  }
-
-  .active,
-  .dot:hover {
-    background-color: #717171;
-  }
-
-  /* Fading animation */
-  .fade {
-    animation-name: fade;
-    animation-duration: 1.5s;
-  }
-
-  @keyframes fade {
-    from {
-      opacity: .4
-    }
-
-    to {
-      opacity: 1
-    }
+  .advert img {
+    opacity: 1;
   }
   .form-wrapper {
     width: 50%;
@@ -504,6 +439,68 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 30px;
+  }
+  .mySlides {
+    display: block;
+  }
+  #slider {
+    position: relative;
+    width: 500px;
+    height: 265px;
+    overflow: hidden;
+    display: flex;
+    margin: 0 auto;
+  }
+  #slider ul {
+    position: relative;
+    list-style: none;
+    height: 100%;
+    /* width: 10000%; */
+    padding: 0;
+    margin: 0;
+    transition: all 750ms ease;
+    left: 0;
+  }
+  
+  #slider ul li {
+    position: relative;
+    height: 100%;
+  
+    float: left;
+  }
+  #slider ul li img {
+    width: 500px;
+    height: 265px;
+  }
+  #slider #prev,
+  #slider #next {
+    width: 50px;
+    line-height: 50px;
+    text-align: center;
+    color: white;
+    text-decoration: none;
+    position: absolute;
+    top: 50%;
+    border-radius: 50%;
+    font-size: 2rem;
+    /* text-shadow: 0 0 20px rgba(0, 0, 0, 0.6); */
+    transform: translateY(-50%);
+    transition: all 150ms ease;
+  }
+  #slider #prev {
+    left: 10px;
+  }
+  
+  #slider #next {
+    right: 10px;
+  }
+  
+  #slider #prev:hover,
+  #slider #next:hover {
+    background-color: rgba(0, 0, 0, 0.5);
+    text-shadow: 0;
+  }
+  .dev {
+    margin-right: 100px;
   }
 }
